--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@ image: /assets/img/logo-1.png
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign roles = site.data.team | group_by:"role" %}
     {% for role in roles %}
-      <h1 class="d-block w-100 pt-5 pb-3 mt-4 text-uppercase fw-bold">{{ role.name }}</h1>
+      <h1 class="d-block w-100 pt-5 pb-3 mt-4 text-uppercase text-center fw-bold">{{ role.name }}</h1>
       {% for player in role.items %}
     <div class="col">
       <div class="card rounded-0 h-100">
@@ -19,7 +19,7 @@ image: /assets/img/logo-1.png
         {% endif %}
         <div class="card-body">
           <h5 class="card-title text-center text-uppercase">{{ player.name }}</h5>
-          <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
+          <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
