--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@ image: /assets/img/logo-1.png
           <img src="/assets/img/pp/default-pp.jpg" class="rounded-0">
         {% endif %}
         <div class="card-body">
-          <h5 class="card-title text-center text-uppercase">{{ player.name }}</h5>
+          <h5 class="card-title text-center text-capitalize">{{ player.name }}</h5>
           <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
