--- a/players.html
+++ b/players.html
@@ -1,14 +1,14 @@
 ---
 layout: page
 title: Players
-image: /assets/img/logo-1.png
+image: /assets/img/logo-2.png
 ---
 
 <div class="container-fluid px-0 bg-light">
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign roles = site.data.players | group_by:"role" %}
     {% for role in roles %}
-      <h1 class="d-block w-100 py-3 text-uppercase text-center fw-bold">{{ role.name }}</h1>
+      <h1 class="d-block w-100 pt-3 text-uppercase text-center fw-bold">{{ role.name }}</h1>
       {% for player in role.items %}
     <div class="col">
       <div class="card rounded-0 h-100">
