--- a/matches.html
+++ b/matches.html
@@ -16,7 +16,7 @@ image: /assets/img/logo-3.png
           <div class="card-body">
             <p class="card-text text-center text-uppercase">{{ item.competition }}</p>
             <p class="card-text text-center text-capitalize">{{ item.date | date_to_long_string }}</p>
-            <div class="d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center justify-content-around py-5">
               <div class="text-center">{{ item.home }}</div>
               <span>vs</span>
               <div class="text-center">{{ item.away }}</div>
