--- a/matches.html
+++ b/matches.html
@@ -14,14 +14,14 @@ image: /assets/img/logo-3.png
       <div class="col">
         <div class="card rounded-0">
           <div class="card-body py-5">
-            <p class="card-text text-center text-uppercase">{{ item.competition }}</p>
-            <p class="card-text text-center text-capitalize">{{ item.date | date_to_long_string }}</p>
-            <div class="d-flex align-items-center justify-content-evenly py-5">
+            <p class="card-text text-center text-uppercase fw-bolder"><small>{{ item.competition }}</small></p>
+            <p class="card-text text-center text-capitalize"><small>{{ item.date | date_to_long_string }}</small></p>
+            <div class="d-flex align-items-center justify-content-between py-5">
               <div class="text-center">{{ item.home }}</div>
-              <div class="position-absolute top-50 start-50 translate-middle align-self-center">vs</div>
+              <div class="position-absolute top-50 start-50 translate-middle align-self-baseline">vs</div>
               <div class="text-center">{{ item.away }}</div>
             </div>
-            <p class="card-text text-center text-capitalize">{{ item.place }}</p>
+            <p class="card-text text-center text-capitalize text-secondary">{{ item.place }}</p>
           </div>
         </div>
         {% endfor %}
