--- a/matches.html
+++ b/matches.html
@@ -18,7 +18,7 @@ image: /assets/img/logo-3.png
             <p class="card-text text-center text-capitalize"><small>{{ item.date | date_to_long_string }}</small></p>
             <div class="d-flex align-items-center justify-content-between py-5">
               <div class="text-center">{{ item.home }}</div>
-              <div class="position-absolute top-50 start-50 translate-middle align-self-baseline">vs</div>
+              <div class="position-absolute top-50 start-50 translate-middle align-self-baseline fs-3 fw-bolder">vs</div>
               <div class="text-center">{{ item.away }}</div>
             </div>
             <p class="card-text text-center text-capitalize text-secondary">{{ item.place }}</p>
