--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: TESA FC
-description: Aya jang lumpat, eweuh jang najong
+title: tesa fc
+description: aya jang lumpat, eweuh jang najong
 image: assets/img/logo-1.png
 ---
 
@@ -18,41 +18,3 @@ image: assets/img/logo-1.png
     </div>
   </div>
 </div>
-
-<!-- disabled
-<div>
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <h1 class="display-4 fw-normal">TESA FOOTBALL CLUB</h1>
-      <p class="lead fw-normal">Aya jang lumpat, eweuh jang najong.</p>
-    </div>
-  </div>
-  
-  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
-    <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-      <div class="my-3 py-3">
-        <h2 class="display-5">Another headline</h2>
-        <p class="lead">And an even wittier subheading.</p>
-      </div>
-      <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    </div>
-    <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-      <div class="my-3 p-3">
-        <h2 class="display-5">Another headline</h2>
-        <p class="lead">And an even wittier subheading.</p>
-      </div>
-      <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-    </div>
-  </div>
-  
-  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-    <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <h1 class="display-4">Partner</h1>
-      <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
-      <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid py-4">
-      <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid"
-    </div>
-  </div>
-</div>
-
--->
