--- a/matches.html
+++ b/matches.html
@@ -5,7 +5,7 @@ title: matches
 dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
 ---
 
-<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0.9 0.9), rgba(0, 0, 0.8 0.8), rgba(0, 0, 0.7 0.7));">
+<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
   <div class="container-sm px-0">
     {% assign matches = site.matches | group_by: "status" %}
     <div class="row row-cols-1 g-2">
@@ -13,7 +13,7 @@ dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Av
       <h6 class="d-block w-100 mb-0 text-uppercase text-center fw-bold">{{ match.name }}</h6>
       {% for item in match.items reversed %}
       <div class="col">
-        <div class="card rounded-0 border-0 mb-2" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));">
+        <div class="card rounded-0 border-0 mb-2" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8));">
           <div class="card-body py-3">
             <p class="card-text text-center fw-bolder mb-0"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
             <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
