--- a/matches.html
+++ b/matches.html
@@ -13,10 +13,10 @@ dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Av
       <h6 class="d-block w-100 mb-0 text-uppercase text-center fw-bold">{{ match.name }}</h6>
       {% for item in match.items reversed %}
       <div class="col">
-        <div class="card rounded-0 border-0 mb-2">
+        <div class="card rounded-0 border-0 mb-2 shadow">
           <div class="card-body py-3">
-            <p class="card-text text-center fw-bolder mb-0"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
-            <p class="card-text text-center text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
+            <p class="card-text text-center fw-bolder mb-0 lh-1"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
+            <p class="card-text text-center fw-bolder text-capitalize text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
             <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase py-2">
               <div class="col-3">
                 <small class="lh-1 float-end fw-bolder">{{ item.home.name }}</small>
