--- a/players.html
+++ b/players.html
@@ -9,7 +9,7 @@ image: /assets/img/tesafc-full-team-3.png
     <div class="row row-cols-2 row-cols-md-4 g-2">
       {% assign roles = site.data.players | group_by: "role" %}
       {% for role in roles %}
-      <h6 class="d-block w-100 text-uppercase fw-bold mb-0">{{ role.name }}</h6>
+      <h6 class="d-block w-100 text-uppercase fw-bold pt-3 mb-0">{{ role.name }}</h6>
       {% for player in role.items %}
       <div class="col" style="min-height: 16rem;">
         <div class="card h-100 text-white border-0 rounded-0">
