--- a/news.html
+++ b/news.html
@@ -7,15 +7,19 @@ image:
 
 <div class="bg-light py-5">
   <div class="container-sm">
+    <h6 class="text-uppercase">all post</h6>
     <div class="row row-cols-1 row-cols-md-3 g-2">
       {% for post in site.posts %}
       <div class="col">
         <div class="card h-100 border-0 rounded-0 shadow-sm">
           {% if post.image %}
-          <img src="{{ post.image }}" alt="" class="card-img-top">
+          <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
           {% endif %}
           <div class="card-body">
             <h5 class="card-title text-capitalize"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h5>
+            {% if post.description %}
+            <h6 class="card-subtitle text-capitalize text-secondary">{{ post.description }}</h6>
+            {% endif %}
             <small class="card-text text-secondary pt-3">{{ post.date | date_to_long_string }}</small>
           </div>
         </div>
