--- a/news.html
+++ b/news.html
@@ -11,16 +11,16 @@ image:
     <div class="row row-cols-1 row-cols-md-3 g-2">
       {% for post in site.posts %}
       <div class="col">
-        <div class="card h-100 border-0 rounded-0 shadow-sm">
+        <div class="card h-100 d-flex flex-column justify-content-end border-0 rounded-0 shadow-sm">
           {% if post.image %}
           <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
           {% endif %}
           <div class="card-body">
             <h5 class="card-title text-capitalize"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h5>
             {% if post.description %}
-            <h6 class="card-subtitle text-capitalize text-secondary">{{ post.description }}</h6>
+            <h6 class="card-subtitle text-capitalize text-secondary mb-2">{{ post.description }}</h6>
             {% endif %}
-            <small class="card-text text-secondary pt-3">{{ post.date | date_to_long_string }}</small>
+            <small class="card-text text-secondary">{{ post.date | date_to_long_string }}</small>
           </div>
         </div>
       </div>
