--- a/news.html
+++ b/news.html
@@ -7,11 +7,11 @@ image:
 
 <div class="bg-light py-5">
   <div class="container-sm">
-    <h6 class="text-uppercase fw-bolder">all post</h6>
+    <h6 class="text-uppercase fw-bolder">all news</h6>
     <div class="row row-cols-1 row-cols-md-3 g-3">
       {% for post in site.posts %}
       <div class="col">
-        <div class="card h-100 d-flex flex-column justify-content-between border-0 rounded-0 shadow-sm">
+        <div class="card h-100 d-flex flex-column justify-content-between align-items-end border-0 rounded-0 shadow-sm">
           {% if post.image %}
           <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
           {% endif %}
