--- a/matches.html
+++ b/matches.html
@@ -5,7 +5,7 @@ title: matches
 dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
 ---
 
-<div class="bg-light py-5">
+<div class="bg-light pt-5">
   <div class="container-sm px-0">
     {% assign matches = site.matches | group_by: "status" %}
     <div class="row row-cols-1 g-3">
@@ -16,7 +16,7 @@ dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Av
         <div class="card rounded-0 border-0 mb-3 shadow-sm">
           <div class="card-body py-3">
             <p class="card-text text-center text-secondary fw-bolder mb-0 lh-1"><small class="text-uppercase">{{ item.type }}</small> • <small class="text-uppercase">{{ item.competition }}</small></p>
-            <p class="card-text text-center text-secondary fw-bolder"><small class="text-uppercase">{{ item.kickoff }}</small></p>
+            <p class="card-text text-center text-secondary"><small class="text-uppercase">{{ item.kickoff }}</small></p>
             <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase py-2">
               <div class="col-3">
                 <small class="lh-1 float-end fw-bolder">{{ item.home.name }}</small>
