--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ contact:
     icon: fa-brands fa-whatsapp
 ---
 
-<div class="row row-cols-4">
+<div class="row row-cols-4 g-3">
   {% assign group = page.contact | group_by: "type" %}
   {% for type in group %}
   <h6 class="d-block w-100 text-uppercase mb-0 pt-3">{{ type.name }}</h6>
@@ -29,7 +29,10 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body">
-        <i class="{{ contact.icon }}"></i>
+        <i class="{{ contact.icon }} fs-3 text-center"></i>
+      </div>
+      <div class="card-footer">
+        <small class="card-text text-center">{{ contact.name }}</small>
       </div>
     </div>
   </div>
