--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <span class="d-block text-center" style="font-size: 6em;"><i class="{{ contact.icon }}"></i></span>
+        <a href="https://wa.me/{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
       </div>
-      <div class="card-footer p-0">
+      <div class="card-footer bg-white p-0">
         <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
       </div>
     </div>
