--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,24 @@ title: contact
 description:
 contact:
   - type: whatsapp
-    name: ilfa
-    url: +6281296827422
-    icon: fa-brands fa-whatsapp
-  - type: whatsapp
     name: angga
-    url: +62 899-6278-710
+    url: https://wa.me/+62 899-6278-710
     icon: fa-brands fa-whatsapp
   - type: whatsapp
     name: ropick
-    url: +62 895-3468-83550
+    url: https://wa.me/+62 895-3468-83550
     icon: fa-brands fa-whatsapp
   - type: whatsapp
     name: habiel
-    url: +62 858-6126-9014
+    url: https://wa.me/+62 858-6126-9014
     icon: fa-brands fa-whatsapp
+  - type: email
+    name: terassaungfc@gmail.com
+    url: terassaungfc@gmail.com
+    icon: fa-brands fa-envelope
 ---
 
-<div class="row row-cols-4 g-3">
+<div class="row row-cols-3 g-3">
   {% assign group = page.contact | group_by: "type" %}
   {% for type in group %}
   <h6 class="d-block w-100 text-uppercase mb-0 pt-3">{{ type.name }}</h6>
@@ -29,7 +29,7 @@ contact:
   <div class="col">
     <div class="card">
       <div class="card-body p-1">
-        <a href="https://wa.me/{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
+        <a href="{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
       </div>
       <div class="card-footer bg-white p-0">
         <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
