--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@ title: contact
 description:
 contact:
   - type: whatsapp
-    name: angga
+    name: Angga
     url: https://wa.me/+62 899-6278-710
     icon: fa-brands fa-whatsapp
   - type: whatsapp
-    name: ropick
+    name: Ropick
     url: https://wa.me/+62 895-3468-83550
     icon: fa-brands fa-whatsapp
   - type: whatsapp
-    name: habiel
+    name: Habiel
     url: https://wa.me/+62 858-6126-9014
     icon: fa-brands fa-whatsapp
   - type: email
@@ -21,7 +21,7 @@ contact:
     icon: fa-solid fa-envelope
 ---
 
-<div class="row row-cols-4 g-3">
+<div class="row row-cols-3 g-3">
   {% assign group = page.contact | group_by: "type" %}
   {% for type in group %}
   <h6 class="d-block w-100 text-uppercase mb-0 pt-3">{{ type.name }}</h6>
@@ -32,7 +32,7 @@ contact:
         <a href="{{ contact.url }}" class="d-block text-center stretched-link link-success text-decoration-none lh-1 p-0" style="font-size: 5em;"><i class="{{ contact.icon }}"></i></a>
       </div>
       <div class="card-footer bg-white p-1">
-        <small class="d-block text-center text-capitalize">{{ contact.name }}</small>
+        <small class="d-block text-center">{{ contact.name }}</small>
       </div>
     </div>
   </div>
