--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ contact:
     icon: fa-solid fa-envelope
 ---
 
-<div class="row row-cols-3 g-2">
+<div class="row row-cols-3 row-cols-md-4 g-2">
   {% assign group = page.contact | group_by: "type" %}
   {% for type in group %}
   <h6 class="d-block w-100 text-uppercase mb-0 pt-3">{{ type.name }}</h6>
